--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devstart": "nodemon task-manager/index.js"
+    "taskmanager": "nodemon ./task-manager/start/app.js"
   },
   "repository": {
     "type": "git",
