--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "taskmanager": "nodemon ./task-manager/start/app.js", 
-    "store-api": "nodemon ./store-api/app.js"
+    "taskmanager": "nodemon ./task-manager/start/app.js",
+    "store-api": "nodemon ./store-api/app.js", 
+    "jwt": "nodemon ./jwt/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "nodemon": "^2.0.15"
   }
